connect with firebase

--- a/.env
+++ b/.env
@@ -1,11 +1,14 @@
 
-VITE_APP_DEFAULTAUTH=fake
+VITE_APP_DEFAULTAUTH="firebase"
 
-VITE_APP_APIKEY=
-VITE_APP_AUTHDOMAIN=
+VITE_APP_DOMAIN="localhost"
+
+# Firebase envs
+VITE_APP_APIKEY="AIzaSyCzYUrvw88SOU2ITNmvW4VLJKAam3OP93Y"
+VITE_APP_AUTHDOMAIN="mandala-token.firebaseapp.com"
+VITE_APP_PROJECTID="mandala-token"
+VITE_APP_STORAGEBUCKET="mandala-token.firebasestorage.app"
+VITE_APP_MESSAGINGSENDERID="421189150856"
+VITE_APP_APPID="1:421189150856:web:c646e0503e07238b9b173d"
+VITE_APP_MEASUREMENTID="G-3DS8942E2V"
 VITE_APP_DATABASEURL=
-VITE_APP_PROJECTID=
-VITE_APP_STORAGEBUCKET=
-VITE_APP_MESSAGINGSENDERID=
-VITE_APP_APPID=
-VITE_APP_MEASUREMENTID=
